# rag-interview-bot

./: .env.example  .gitignore  .python-version  Dockerfile  README.md  feedback_generator.py  judy_note.txt  main.py  pyproject.toml  question_generator.py  requirements.txt  run.py  search_engine.py  utils.py
backend/: config.py  database.py  main.py
backend/api/: __init__.py  audio_router.py  interview_router.py  resume_router.py  stt_evaluation_router.py
backend/models/: pydantic_models.py
backend/services/: __init__.py  agent_service.py  enhanced_agent_service.py  enhanced_speech_service.py  feedback_service.py  ocr_service.py  rag_service.py  resume_service.py  session_service.py  speech_service.py  stt_metrics.py
backend/utils/: __init__.py  bullet_parser.py  file_helper.py
data/: ad_designer.json  backend_engineer.json  hotel_counter.json  interview_points.json  interview_questions.json  maketing.txt
knowledge_base/business/: 人力資源專員.json  品牌經理.json  客戶經理.json  專案管理師.json  數位行銷專員.json  會計師.json  業務代表.json  業務經理.json  營運經理.json  產品經理.json  行銷企劃.json  財務分析師.json
knowledge_base/creative/: Podcaster.json  內容創作者.json  動畫設計師.json  平面設計師.json  影片剪輯師.json  攝影師.json  文案企劃.json  社群小編.json  網頁設計師.json
knowledge_base/education/: 企業培訓講師.json  國中教師.json  國小教師.json  幼教老師.json  線上課程講師.json  英文家教.json  補習班老師.json  高中教師.json
knowledge_base/finance/: 保險業務.json  投資顧問.json  稽核人員.json  銀行櫃員.json  風險管理師.json
knowledge_base/healthcare/: 營養師.json  物理治療師.json  職能治療師.json  藥師.json  護理師.json  醫務行政人員.json  醫檢師.json  醫療器材業務.json
knowledge_base/legal/: 公務員.json  專利工程師.json  律師.json  法務人員.json  社工.json  警察.json
knowledge_base/manufacturing/: 供應鏈管理.json  品保工程師.json  品管人員.json  工廠作業員.json  採購專員.json  機械工程師.json  生產管理.json  電機工程師.json
knowledge_base/media/: 主播.json  公關專員.json  廣告AE.json  活動企劃.json  編輯.json  記者.json
knowledge_base/service/: 健身教練.json  客服專員.json  導遊.json  店長.json  廚師.json  房務人員.json  按摩師.json  美容美髮師.json  調酒師.json  零售門市人員.json  飯店櫃檯人員.json  餐飲服務人員.json
knowledge_base/tech/: DevOps_工程師.json  QA_測試工程師.json  UI_UX_設計師.json  全端工程師.json  前端工程師.json  後端工程師.json  機器學習工程師.json  產品經理.json  系統管理員.json  網路工程師.json  資料分析師.json  資料科學家.json  軟體工程師.json
resume/: ocr_output_後端.json
scripts/: batch_knowledge_generate.py  batch_stt_test.py  create_test_data.py  evaluate_local.py  evaluate_magicdata.py  generate_knowledge.py  manual_test_services.py  monitor.py
src/: agents.py  bullet_resume_parser.py  cleanup.py  database.py  knowledge_rag.py  main.py  monitor.py  ocr_processor.py  rag_engine.py  resume_structurer.py  search_engine.py
tests/: conftest.py  test_agents.py  test_feedback.py  test_interview_router.py  test_ocr.py  test_rag.py  test_structurer.py
