[project]
name = "new-interview-bot"
version = "1.0.0"
description = "An intelligent mock interview system with Azure OCR and Multi-Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.2.1",
    "python-dotenv>=1.0.0",
    # Azure OCR
    "azure-cognitiveservices-vision-computervision>=0.9.0",
    "msrest>=0.7.1",
    # NLP (用於履歷結構化)
    "spacy>=3.7.0",
    "sentence-transformers>=5.1.2",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]
