[project]
name = "new-interview-bot"
version = "1.0.0"
description = "An intelligent mock interview system with Azure OCR and Multi-Agent"
readme = "README.md"
requires-python = ">=3.10,<3.13"  # 已正確，3.10~3.12 穩定
license = {text = "MIT"}  # 建議加（開源友好）

authors = [
    {name = "Your Name", email = "you@example.com"}  # 建議加（團隊專案必備）
]

dependencies = [
    "ollama>=0.2.1",
    "python-dotenv>=1.0.0",
    # Azure OCR
    "azure-cognitiveservices-vision-computervision>=0.9.0",
    "msrest>=0.7.1",
    # NLP (用於履歷結構化)
    "spacy>=3.7.0",
    "sentence-transformers>=5.1.2",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pip>=25.3",
    "uvicorn>=0.38.0",
    "numpy<2.0.0",
    "sqlalchemy>=2.0.45",
    "werkzeug>=3.1.4",
    "faiss-cpu>=1.13.1",
    "redis>=7.1.0",
    "pydantic-settings>=2.12.0",
    "azure-cognitiveservices-speech>=1.47.0",
    "fastapi>=0.124.2",
    "python-multipart>=0.0.20",
]