[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "new-interview-bot"
version = "1.0.0"
description = "An intelligent mock interview system with Azure OCR and Multi-Agent"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

authors = [
    {name = "Your Name", email = "you@example.com"}
]

# === 核心依賴 (已移除重複項並修正版本) ===
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9", # 處理檔案上傳必備
    # LLM & AI
    "ollama>=0.2.1",
    "sentence-transformers>=3.0.0", # 修正：目前最新約為 3.x，5.x 不存在
    # Azure Services
    "azure-cognitiveservices-vision-computervision>=0.9.0",
    "msrest>=0.7.1",
    "azure-cognitiveservices-speech>=1.37.0",
    # RAG & Vector DB
    "faiss-cpu>=1.8.0",
    "redis>=5.0.0",
    "numpy<2.0.0", # 限制 numpy 版本以相容舊版 ML 套件
    # Database & Utils
    "sqlalchemy>=2.0.30",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "werkzeug>=3.0.0",
    # NLP & Spacy
    "spacy>=3.7.0",
    "zh-core-web-sm>=3.7.0",
    "google-genai>=1.56.0",
]

# === 開發依賴 (符合 uv 標準) ===
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14.0",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.6.0",
]

# === 工具設定 ===

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

# === UV 特殊設定 (Spacy 模型下載) ===
[tool.uv.sources]
zh-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.7.0/zh_core_web_sm-3.7.0-py3-none-any.whl" }
